A couple allocation instrument related changes/fixes.
- Update JarFinder, which is based on reflect.ClassPath, to be able to search the java.class.path for the system classloader like ClassPath now does.
- Update AllocationInstrument to work with java-allocation-instrumenter 3.1.0, which has a different Premain-Class name.

RELNOTES=n/a

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=186036521