@@ -16,8 +16,14 @@
 
 package com.google.caliper.runner;
 
+import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.StandardSystemProperty.JAVA_CLASS_PATH;
+import static com.google.common.base.StandardSystemProperty.PATH_SEPARATOR;
+import static java.util.logging.Level.WARNING;
+
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Splitter;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
@@ -25,7 +31,7 @@ import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -51,7 +57,13 @@ final class JarFinder {
   /**
    * Returns a list of jar files reachable from the given class loaders.
    *
-   * <p>Currently only {@link URLClassLoader} and only {@code file://} urls are supported.
+   * <p><b>Warning:</b> Current limitations:
+   *
+   * <ul>
+   *   <li>Looks only for files and JARs in URLs available from {@link URLClassLoader} instances or
+   *       the {@linkplain ClassLoader#getSystemClassLoader() system class loader}.
+   *   <li>Only understands {@code file:} URLs.
+   * </ul>
    *
    * @throws IOException if the attempt to read class path resources (jar files or directories)
    *     failed.
@@ -59,53 +71,78 @@ final class JarFinder {
   public static ImmutableSet<File> findJarFiles(ClassLoader first, ClassLoader... rest)
       throws IOException {
     Scanner scanner = new Scanner();
-    Map<URI, ClassLoader> map = Maps.newLinkedHashMap();
+    Map<File, ClassLoader> map = Maps.newLinkedHashMap();
     for (ClassLoader classLoader : Lists.asList(first, rest)) {
       map.putAll(getClassPathEntries(classLoader));
     }
-    for (Map.Entry<URI, ClassLoader> entry : map.entrySet()) {
+    for (Map.Entry<File, ClassLoader> entry : map.entrySet()) {
       scanner.scan(entry.getKey(), entry.getValue());
     }
     return scanner.jarFiles();
   }
 
   @VisibleForTesting
-  static ImmutableMap<URI, ClassLoader> getClassPathEntries(ClassLoader classloader) {
-    Map<URI, ClassLoader> entries = Maps.newLinkedHashMap();
+  static ImmutableMap<File, ClassLoader> getClassPathEntries(ClassLoader classloader) {
+    Map<File, ClassLoader> entries = Maps.newLinkedHashMap();
     // Search parent first, since it's the order ClassLoader#loadClass() uses.
     ClassLoader parent = classloader.getParent();
     if (parent != null) {
       entries.putAll(getClassPathEntries(parent));
     }
-    if (classloader instanceof URLClassLoader) {
-      URLClassLoader urlClassLoader = (URLClassLoader) classloader;
-      for (URL entry : urlClassLoader.getURLs()) {
-        URI uri;
-        try {
-          uri = entry.toURI();
-        } catch (URISyntaxException e) {
-          throw new IllegalArgumentException(e);
-        }
-        if (!entries.containsKey(uri)) {
-          entries.put(uri, classloader);
+    for (URL url : getClassLoaderUrls(classloader)) {
+      if (url.getProtocol().equals("file")) {
+        File file = toFile(url);
+        if (!entries.containsKey(file)) {
+          entries.put(file, classloader);
         }
       }
     }
     return ImmutableMap.copyOf(entries);
   }
 
+  private static ImmutableList<URL> getClassLoaderUrls(ClassLoader classloader) {
+    if (classloader instanceof URLClassLoader) {
+      return ImmutableList.copyOf(((URLClassLoader) classloader).getURLs());
+    }
+    if (classloader.equals(ClassLoader.getSystemClassLoader())) {
+      return parseJavaClassPath();
+    }
+    return ImmutableList.of();
+  }
+
+  /**
+   * Returns the URLs in the class path specified by the {@code java.class.path} {@linkplain
+   * System#getProperty system property}.
+   */
+  // TODO(b/65488446): Use the public API once it's available.
+  private static ImmutableList<URL> parseJavaClassPath() {
+    ImmutableList.Builder<URL> urls = ImmutableList.builder();
+    for (String entry : Splitter.on(PATH_SEPARATOR.value()).split(JAVA_CLASS_PATH.value())) {
+      try {
+        try {
+          urls.add(new File(entry).toURI().toURL());
+        } catch (SecurityException e) { // File.toURI checks to see if the file is a directory
+          urls.add(new URL("file", null, new File(entry).getAbsolutePath()));
+        }
+      } catch (MalformedURLException e) {
+        logger.log(WARNING, "malformed classpath entry: " + entry, e);
+      }
+    }
+    return urls.build();
+  }
+
   @VisibleForTesting
   static final class Scanner {
     private final ImmutableSet.Builder<File> jarFiles = new ImmutableSet.Builder<File>();
-    private final Set<URI> scannedUris = Sets.newHashSet();
+    private final Set<File> scannedFiles = Sets.newHashSet();
 
     ImmutableSet<File> jarFiles() {
       return jarFiles.build();
     }
 
-    void scan(URI uri, ClassLoader classloader) throws IOException {
-      if (uri.getScheme().equals("file") && scannedUris.add(uri)) {
-        scanFrom(new File(uri), classloader);
+    void scan(File file, ClassLoader classloader) throws IOException {
+      if (scannedFiles.add(file)) {
+        scanFrom(file, classloader);
       }
     }
 
@@ -145,8 +182,8 @@ final class JarFinder {
       }
       jarFiles.add(file);
       try {
-        for (URI uri : getClassPathFromManifest(file, jarFile.getManifest())) {
-          scan(uri, classloader);
+        for (File path : getClassPathFromManifest(file, jarFile.getManifest())) {
+          scan(path, classloader);
         }
       } finally {
         try {
@@ -159,29 +196,31 @@ final class JarFinder {
     /**
      * Returns the class path URIs specified by the {@code Class-Path} manifest attribute, according
      * to <a
-     * href="http://docs.oracle.com/javase/6/docs/technotes/guides/jar/jar.html#Main%20Attributes">
-     * JAR File Specification</a>. If {@code manifest} is null, it means the jar file has no
-     * manifest, and an empty set will be returned.
+     * href="http://docs.oracle.com/javase/8/docs/technotes/guides/jar/jar.html#Main_Attributes">JAR
+     * File Specification</a>. If {@code manifest} is null, it means the jar file has no manifest,
+     * and an empty set will be returned.
      */
     @VisibleForTesting
-    static ImmutableSet<URI> getClassPathFromManifest(File jarFile, @Nullable Manifest manifest) {
+    static ImmutableSet<File> getClassPathFromManifest(File jarFile, @Nullable Manifest manifest) {
       if (manifest == null) {
         return ImmutableSet.of();
       }
-      ImmutableSet.Builder<URI> builder = ImmutableSet.builder();
+      ImmutableSet.Builder<File> builder = ImmutableSet.builder();
       String classpathAttribute =
           manifest.getMainAttributes().getValue(Attributes.Name.CLASS_PATH.toString());
       if (classpathAttribute != null) {
         for (String path : CLASS_PATH_ATTRIBUTE_SEPARATOR.split(classpathAttribute)) {
-          URI uri;
+          URL url;
           try {
-            uri = getClassPathEntry(jarFile, path);
-          } catch (URISyntaxException e) {
+            url = getClassPathEntry(jarFile, path);
+          } catch (MalformedURLException e) {
             // Ignore bad entry
             logger.warning("Invalid Class-Path entry: " + path);
             continue;
           }
-          builder.add(uri);
+          if (url.getProtocol().equals("file")) {
+            builder.add(toFile(url));
+          }
         }
       }
       return builder.build();
@@ -189,16 +228,22 @@ final class JarFinder {
 
     /**
      * Returns the absolute uri of the Class-Path entry value as specified in <a
-     * href="http://docs.oracle.com/javase/6/docs/technotes/guides/jar/jar.html#Main%20Attributes">
-     * JAR File Specification</a>. Even though the specification only talks about relative urls,
+     * href="http://docs.oracle.com/javase/8/docs/technotes/guides/jar/jar.html#Main_Attributes">JAR
+     * File Specification</a>. Even though the specification only talks about relative urls,
      * absolute urls are actually supported too (for example, in Maven surefire plugin).
      */
     @VisibleForTesting
-    static URI getClassPathEntry(File jarFile, String path) throws URISyntaxException {
-      URI uri = new URI(path);
-      return uri.isAbsolute()
-          ? uri
-          : new File(jarFile.getParentFile(), path.replace('/', File.separatorChar)).toURI();
+    static URL getClassPathEntry(File jarFile, String path) throws MalformedURLException {
+      return new URL(jarFile.toURI().toURL(), path);
+    }
+  }
+
+  private static File toFile(URL url) {
+    checkArgument(url.getProtocol().equals("file"));
+    try {
+      return new File(url.toURI()); // Accepts escaped characters like %20.
+    } catch (URISyntaxException e) { // URL.toURI() doesn't escape chars.
+      return new File(url.getPath()); // Accepts non-escaped chars like space.
     }
   }
 }
